--- a/styles/general.css
+++ b/styles/general.css
@@ -1,9 +1,12 @@
 p {
   font-family: Roboto, Arial;
   margin-top: 0;
-   margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 body {
   margin: 0;
+  padding-top: 80px;
+  padding-left: 95px;
+  background-color: whitesmoke;
 }
