--- a/styles/header.css
+++ b/styles/header.css
@@ -11,6 +11,7 @@
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: rgb(222, 222, 222);
+  z-index: 100;
 }
 
 .left-section {
@@ -102,6 +103,28 @@
 
 .notifications-icon {
   height: 24px;
+}
+
+.notifications-icon-container {
+  position: relative;
+}
+
+.notifications-count {
+  position: absolute;
+  top: -3px;
+  right: -7px;
+  background-color: rgb(204, 0, 0);
+  color: white;
+  font-family: Roboto, Arial;
+  font-size: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 1.5px;
+  padding-bottom: 1.5px;
+  border-radius: 10px;
+  border-width: 2px;
+  border-style: solid;
+  border-color: white;
 }
 
 .current-user-picture {
