--- a/styles/video.css
+++ b/styles/video.css
@@ -3,11 +3,10 @@
 }
 
 .video-title {
-  margin-top: 0;
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
-  margin-bottom: 12px;
+  margin-bottom: 0;
 }
 
 .video-info-grid {
@@ -16,24 +15,26 @@
 }
 
 .profile-picture {
-  width: 40px;
+  width: 36px;
   border-radius: 360px;
 }
 
 .thumbnail-row {
-  margin-bottom: 12px;
+  margin-bottom: 8px;
   position: relative;
 }
 
 .video-author {
   font-size: 12px;
   color: rgb(96, 96, 96);
-  margin-bottom: 4px;
+  margin-top: 10px;
 }
 
 .video-stats {
   font-size: 12px;
   color: rgb(96, 96, 96);
+  margin-top: 4px;
+  margin-bottom: 12px;
 }
 
 .video-grid {
