--- a/styles/video.css
+++ b/styles/video.css
@@ -9,6 +9,16 @@
   margin-bottom: 0;
 }
 
+.video-link {
+  color: black;
+  text-decoration: none;
+}
+
+.channel-link {
+  text-decoration: none;
+  color: rgb(96, 96, 96);
+}
+
 .video-info-grid {
   display: grid;
   grid-template-columns: 50px 1fr;
@@ -44,18 +54,32 @@
   row-gap: 40px;
 }
 
+@media (max-width: 870px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (min-width: 871px) and (max-width: 1124px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: 1125px) {
+  .video-grid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+
 .video-time {
   background-color: black;
   color: white;
   position: absolute;
   bottom: 8px;
   right: 5px;
-  font-family: Roboto, Arial;
   font-size: 12px;
   font-weight: 500;
-  padding-left: 4px;
-  padding-right: 4px;
-  padding-top: 4px;
-  padding-bottom: 4px;
+  padding: 4px;
   border-radius: 2px;
 }
