--- a/styles/general.css
+++ b/styles/general.css
@@ -4,7 +4,7 @@ p {
 }
 
 body {
-  /* This is a comment in css */
+  /* This is style below will be inherited*/
   font-family: Roboto, Arial;
   margin: 0;
   padding-top: 80px;
